--- a/src/app/chart/chart.component.html
+++ b/src/app/chart/chart.component.html
@@ -1,1 +1,10 @@
-<p>chart works!</p>
+<div id="chart">
+    <apx-chart
+      [series]="chartOptions.series"
+      [chart]="chartOptions.chart"
+      [xaxis]="chartOptions.xaxis"
+      [yaxis]="chartOptions.yaxis"
+      
+    ></apx-chart>
+  </div>
+  
