--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -11,7 +11,7 @@
                 </tr>
             </thead>
             <tbody class="table-striped">
-                <tr *ngFor="let task of tasks; let i = index">
+                <tr *ngFor="let task of tasks.slice().reverse(); let i = index">
 
 
                     <td>{{ task.taskName }}</td>
